# pharmacovigilance-ade-classifier

./: .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml  requirements-colab.txt
configs/: ablation.yaml
data/splits/: ade_corpus_v2_80_10_10.datacard.json  ade_corpus_v2_80_10_10.json
docs/: code-map.md  dataset.md  overview.md  paper.md  pipeline.md  reproduce.md
notebooks/: analysis.ipynb  colab_train.ipynb
results/: pairwise_gaps.csv
results/metrics/: bert-base_seed1000.json  bert-base_seed123.json  bert-base_seed13.json  bert-base_seed2024.json  bert-base_seed2500.json  bert-base_seed31415.json  bert-base_seed42.json  bert-base_seed4242.json  bert-base_seed7777.json  bert-base_seed8675.json  biobert_seed1000.json  biobert_seed123.json  biobert_seed13.json  biobert_seed2024.json  biobert_seed2500.json  biobert_seed31415.json  biobert_seed42.json  biobert_seed4242.json  biobert_seed7777.json  biobert_seed8675.json  pubmedbert_seed1000.json  pubmedbert_seed123.json  pubmedbert_seed13.json  pubmedbert_seed2024.json  pubmedbert_seed2500.json  pubmedbert_seed31415.json  pubmedbert_seed42.json  pubmedbert_seed4242.json  pubmedbert_seed7777.json  pubmedbert_seed8675.json
results/predictions/: bert-base_seed1000.npz  bert-base_seed123.npz  bert-base_seed13.npz  bert-base_seed2024.npz  bert-base_seed2500.npz  bert-base_seed31415.npz  bert-base_seed42.npz  bert-base_seed4242.npz  bert-base_seed7777.npz  bert-base_seed8675.npz  biobert_seed1000.npz  (+19 more)
scripts/: compute_pairwise_gaps.py
tests/: test_analysis.py  test_data.py  test_evaluate.py
(+24 files in other folders)
