[project]
name = "pv-ade"
version = "0.1.0"
description = "Pharmacovigilance ADE classifier — domain-adaptive pretraining ablation on ADE Corpus v2."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Tyson Johnson"}]
dependencies = [
    "datasets>=2.14",
    "transformers>=4.46",
    "evaluate>=0.4",
    "torch>=2.1",
    "scikit-learn>=1.3",
    "pandas>=2.1",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.10",
    "ruff>=0.1",
    "pytest>=7.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
